--- a/src/components/Services.css
+++ b/src/components/Services.css
@@ -2,6 +2,8 @@
   margin: 64px auto 0 auto;
   max-width: 1200px;
   text-align: center;
+  margin-top: -148px;
+  margin-bottom: 48px;
 }
 
 .nyota-services h2 {
